--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -2,20 +2,23 @@
   <div class="card-header">
     Product List
   </div>
-</div>
-<div>
-  <div class="row">
-    <div class="col-md-2">
+
+  <div class="card-body">
+    <div class="row">
+      <div class="col-md-2">
+        Filter by:
+      </div>
       <div class="col-md-4">
         <input type="text">
       </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-6">
-      <h4>Filtered by: </h4>
+    <div class="row">
+      <div class="col-md-6">
+        <h4>Filtered by: </h4>
+      </div>
     </div>
   </div>
+
   <div class="table-responsive">
     <table class="table">
       <thead>
