--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -20,7 +20,7 @@
   </div>
 
   <div class="table-responsive">
-    <table class="table">
+    <table class="table" *ngIf="products.length">
       <thead>
         <tr>
           <th>
@@ -34,7 +34,14 @@
         </tr>
       </thead>
       <tbody>
-        <!--TODO display Products-->
+        <tr *ngFor="let product of products">
+          <td></td>
+          <td>{{product.productName}}</td>
+          <td>{{product.productCode}}</td>
+          <td>{{product.releaseDate}}</td>
+          <td>{{product.price}}</td>
+          <td>{{product.starRating}}</td>
+        </tr>
       </tbody>
     </table>
   </div>
