--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -20,7 +20,8 @@
   </div>
 
   <div class="table-responsive">
-    <table class="table" *ngIf="products.length">
+    <table class="table"
+           *ngIf="products.length">
       <thead>
         <tr>
           <th>
@@ -35,7 +36,13 @@
       </thead>
       <tbody>
         <tr *ngFor="let product of products">
-          <td></td>
+          <td>
+            <img [src]="product.imageUrl"
+                 [style.width.px]="imageWidth"
+                 [style.margin.px]="imageMargin"
+                 [title]="product.productName">
+
+          </td>
           <td>{{product.productName}}</td>
           <td>{{product.productCode}}</td>
           <td>{{product.releaseDate}}</td>
