--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -25,7 +25,10 @@
       <thead>
         <tr>
           <th>
-            <button class="btn btn-primary">Show Image</button>
+            <button (click)="toggleImage()"
+                    class="btn btn-primary">
+              {{this.showImage ? 'Hide' : 'Show'}} Image
+            </button>
           </th>
           <th>Product</th>
           <th>Code</th>
@@ -37,7 +40,8 @@
       <tbody>
         <tr *ngFor="let product of products">
           <td>
-            <img [src]="product.imageUrl"
+            <img *ngIf="showImage"
+                 [src]="product.imageUrl"
                  [style.width.px]="imageWidth"
                  [style.margin.px]="imageMargin"
                  [title]="product.productName">
